<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@string/home"
            android:id="@+id/icon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/home"/>
        <LinearLayout
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginStart="20sp">

            <TextView
                android:id="@+id/Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textStyle="bold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/name"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_name" />

        </LinearLayout>

        <ImageView
            android:layout_marginStart="60dp"
            android:id="@+id/imageView2"
            android:contentDescription="@string/like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/_166_1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_name"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:background="@drawable/shape"
            android:autofillHints="name"
            android:hint="@string/search"
            android:inputType="textMultiLine"
            android:textColor="@color/black">
        </EditText>

        <ImageView
            android:contentDescription="@string/light"
            android:layout_marginStart="10dp"
            android:id="@+id/lightt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/stroke"
            app:srcCompat="@drawable/filter_1" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info"
        android:layout_width="380dp"
        android:layout_height="115dp"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_badge"
        android:background="@drawable/shape_green">
        <ImageView
            android:id="@+id/paint"
            android:contentDescription="@string/illustrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image" />

        <LinearLayout
            android:id="@+id/info_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name_info"
                android:layout_width="243dp"
                android:layout_height="25dp"
                android:text="@string/select"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"/>

            <TextView
                android:id="@+id/user_info"
                android:layout_width="243dp"
                android:layout_height="25dp"
                android:layout_marginStart="5dp"
                android:text="@string/multiple_users"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@+id/name_info" />
            <TextView
                android:layout_marginTop="8dp"
            android:id="@+id/order_info"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/set_info"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:text="@string/set"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/paint"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linear_references"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info">
        <TextView
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:text="@string/preferences"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/pen" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="380dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/linear_references"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.recyclerview.widget.RecyclerView>



</androidx.constraintlayout.widget.ConstraintLayout>